remove unique product name logic, config cloudinary